--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,9 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_351"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="lib" path="D:/SDK.jar"/>
+	<classpathentry kind="lib" path="D:/class/myLib/javax.mail-api-1.6.2.jar"/>
+	<classpathentry kind="lib" path="D:/class/myLib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="D:/class/myLib/jakarta.mail-2.0.1.jar"/>
+	<classpathentry kind="lib" path="D:/class/myLib/javax.mail-1.6.2.jar"/>
 	<classpathentry kind="output" path="out/production/coding_test"/>
 </classpath>
