--- a/.classpath
+++ b/.classpath
@@ -27,5 +27,6 @@
 	<classpathentry kind="lib" path="D:/class/myLib/commons-math3-3.6.1.jar"/>
 	<classpathentry kind="lib" path="D:/class/myLib/poi-5.2.3.jar"/>
 	<classpathentry kind="lib" path="D:/class/myLib/poi-ooxml-5.2.3.jar"/>
+	<classpathentry kind="lib" path="D:/class/myLib/webdriver-manager-13.0.0-beta.jar"/>
 	<classpathentry kind="output" path="out/production/coding_test"/>
 </classpath>
