--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,4 @@ out/production/coding_test/com/test/practice/z_test/Test.class
 out/production/coding_test/com/test/TestJWT.class
 out/production/coding_test/PaymentDto.class
 *.class
+.classpath
