--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_351"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="lib" path="D:/class/myLib/javax.mail-api-1.6.2.jar"/>
@@ -28,5 +28,6 @@
 	<classpathentry kind="lib" path="D:/class/myLib/poi-5.2.3.jar"/>
 	<classpathentry kind="lib" path="D:/class/myLib/poi-ooxml-5.2.3.jar"/>
 	<classpathentry kind="lib" path="D:/class/myLib/webdriver-manager-13.0.0-beta.jar"/>
+	<classpathentry kind="lib" path="D:/class/myLib/lombok.jar"/>
 	<classpathentry kind="output" path="out/production/coding_test"/>
 </classpath>
