--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,4 @@ src/com/test/EXCEL/MakeQueryUseExcel.java
 src/com/test/TEST/TTest3.java
 src/com/test/TEST/TTest5.java
 src/com/test/utils/testfile/TimeCheck.java
+*.class
